--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body { 
-    background-color: ;
+body {
+    background-color: rgb(58, 198, 223);
 }
 
-.cabecalho{
+.cabecalho {
     background-color: black;
     color: whitesmoke;
     padding-top: 30px;
@@ -15,34 +15,31 @@ body {
     gap: 30%;
 }
 
-#titulo {
-
-}
+#titulo {}
 
 p {
-    
+    font-size: 25px;
 }
 
 .imgcentro {
+    align-items: center;
 
 }
 
-nav{
+nav {}
 
-}
-
-li{
+li {
     display: inline-block;
-   
+
 
 }
 
-li a{
-    font-size: 50px;
+li a {
+    font-size: 25px;
 
 }
 
-button{
+button {
     font-size: 16px;
     color: rgb(255, 0, 132);
 
