--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .cabecalho {
-    background-color: black;
+    background-color: rgb(218, 42, 218);
     color: whitesmoke;
     padding-top: 30px;
     padding-bottom: 30px;
