--- a/style.css
+++ b/style.css
@@ -1,45 +1,69 @@
 body {
-    background-color:#FFC0CB;
+    background-color: rgb(236, 142, 158);
+    line-height: 2.1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cabecalho {
-    background-color: rgb(236, 87, 187);
-    color: whitesmoke;
+    background-color: rgb(204, 115, 130);
+    color: black;
     padding-top: 30px;
     padding-bottom: 30px;
     font-size: 25px;
     padding: 20px;
     text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 30%;
 }
 
-#titulo {}
+.titulo {
+    font-size: 40px;
+    text-transform: uppercase;
+    text-decoration: double;
+    font-weight: bold;
+    text-align: center;
+}
 
 p {
     font-size: 25px;
+    text-align: center;
+    max-width: 800px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .imgcentro {
-    align-items: center;
-    height: 250px;
-    width: 250px;
+    max-width: 90%;
+    height: auto;
+    width: 500px;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 80px;
 }
 
 nav {}
 
-li {
-    
-}
+li {}
 
 li a {
     font-size: 25px;
-
 }
 
 button {
     font-size: 16px;
     color: rgb(255, 0, 132);
+}
 
+@media screen and (max-width: 768px) {
+
+    body {}
+
+    .titulo {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 18px;
+    }
 }
